# OpenTaxi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SOLVEIT_CRITIQUE_FULFILLMENT_ANALYSIS.md  VERIFICATION_REPORT.md  benchmark_results_comprehensive.json  comprehensive_benchmark.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: GETTING_STARTED.md  INTERFACES.md  OPEN_DATA_PHILOSOPHY.md  PERFORMANCE.md  RL_INTERFACE.md  SCENARIO_FORMAT.md  VISUALIZATION.md  documentation.md
examples/: generate_scenarios.py  performance_benchmark.py  run_sim.py  train_rl.py
examples/scenarios/: benchmark_traffic_heavy.json  benchmark_traffic_light.json  benchmark_traffic_medium.json
opentaxi/: __init__.py  aircraft.py  airport.py  calibration.py  controller.py  evaluation.py  planners.py  rl_env.py  simulator.py  synthetic_scenarios.py  tools.py
opentaxi/airport_map/: changi.graphml
